# taq-suite

./: .gitignore  README.md  main.py  pyproject.toml  testing.py
scripts/: hexdump.py  print_1999_01_idx_df.py  process_chunk.py  process_day.py  show_parquet_preview.py  test_path.py
src/taq_backtester/: __init__.py
src/taq_backtester/dal/dao/: raw_taq_dao.py  taq_dao.py
src/taq_backtester/dal/models/: byte_schema.py  database.py  schema.py  taq_month.py  taq_table.py
src/taq_backtester/engine/: backtester.py  computations.py
src/taq_backtester/engine/model/: config.py
src/taq_backtester/engine/models/: schema.py
src/taq_backtester/model/: schema.py
src/taq_etl/: __init__.py  __main__.py  config.py
src/taq_etl/cli/: main.py  process.py  utils.py
src/taq_etl/dal/dao/: raw_taq_dao.py
src/taq_etl/dal/models/: byte_schema.py  database.py  taq_file.py  taq_month.py
src/taq_etl/service/: raw_taq_service.py
