[project]
name = "taq-suite" 
version = "0.1.0"
description = "High-performance TAQ ETL and Backtesting suite"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.3",
    "dataframely>=2.9.1",
    "ipykernel>=7.2.0",
    "lz4>=4.4.5",
    "numpy>=2.4.4",
    "polars>=1.40.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.1",
    "tqdm>=4.67.3",
]
[project.scripts]
taq-etl = "taq_etl.cli.main:cli"
